--- a/missing_values.ipynb
+++ b/missing_values.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# --- Imputation ---"
+    "# --- Univariate Imputation ---"
    ]
   },
   {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +746,7 @@
        "5    3.0     C    1.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,17 +760,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "categ_imputer = SimpleImputer(missing_values='none', strategy='most_frequent', verbose=1)\n",
-    "num_imputer = SimpleImputer(missing_values=np.nan, strategy='median', verbose=1)"
+    "num_imputer = SimpleImputer(missing_values=np.nan, strategy='median', verbose=1, add_indicator=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -786,12 +786,12 @@
     "categ_cols = list(df.select_dtypes(include=['object']).columns.values)\n",
     "num_cols = list(df.select_dtypes(exclude=['object']).columns.values)\n",
     "\n",
-    "print('Categorical columns:\\t', categorical_cols, '\\nNumerical columns:\\t', numerical_cols, )"
+    "print('Categorical columns:\\t', categ_cols, '\\nNumerical columns:\\t', num_cols, )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,17 +801,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[num_cols] = num_imputer.transform(df[num_cols].values)\n",
-    "df[categ_cols] = categ_imputer.transform(df[categ_cols].values)"
+    "df[categ_cols] = categ_imputer.transform(df[categ_cols].values)\n",
+    "df[num_cols + list(map(lambda x: x + '_na_indicator', num_cols))] =\\\n",
+    "                pd.DataFrame(num_imputer.transform(df[num_cols].values), index=df.index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -838,6 +839,8 @@
        "      <th>col_1</th>\n",
        "      <th>col_2</th>\n",
        "      <th>col_3</th>\n",
+       "      <th>col_1_na_indicator</th>\n",
+       "      <th>col_3_na_indicator</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -846,52 +849,64 @@
        "      <td>1.0</td>\n",
        "      <td>A</td>\n",
        "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2.0</td>\n",
        "      <td>B</td>\n",
        "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2.0</td>\n",
        "      <td>B</td>\n",
        "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
        "      <td>C</td>\n",
        "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.0</td>\n",
        "      <td>B</td>\n",
        "      <td>7.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>3.0</td>\n",
        "      <td>C</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   col_1 col_2  col_3\n",
-       "0    1.0     A    8.0\n",
-       "1    2.0     B    6.0\n",
-       "2    2.0     B    7.0\n",
-       "3    3.0     C    9.0\n",
-       "4    2.0     B    7.0\n",
-       "5    3.0     C    1.0"
+       "   col_1 col_2  col_3  col_1_na_indicator  col_3_na_indicator\n",
+       "0    1.0     A    8.0                 0.0                 0.0\n",
+       "1    2.0     B    6.0                 0.0                 0.0\n",
+       "2    2.0     B    7.0                 1.0                 1.0\n",
+       "3    3.0     C    9.0                 0.0                 0.0\n",
+       "4    2.0     B    7.0                 0.0                 1.0\n",
+       "5    3.0     C    1.0                 0.0                 0.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -937,11 +952,474 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# --- Multivariate Imputation ---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read here:\n",
+    "https://scikit-learn.org/stable/modules/generated/sklearn.impute.IterativeImputer.html"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Or here: https://github.com/eltonlaw/impyute\n",
+    "#from impyute.imputation.cs import fast_knn\n",
+    "#imputed_training=fast_knn(df.values, k=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.experimental import enable_iterative_imputer\n",
+    "from sklearn.impute import IterativeImputer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_1</th>\n",
+       "      <th>col_2</th>\n",
+       "      <th>col_3</th>\n",
+       "      <th>col_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>A</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>qwe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>rty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col_1 col_2  col_3 col_4\n",
+       "0    1.0     A    8.0   qwe\n",
+       "1    7.0     B    6.0   NaN\n",
+       "2    NaN     B    NaN   rty\n",
+       "3    3.0     C    9.0     C\n",
+       "4    2.0   NaN    NaN   NaN\n",
+       "5    3.0     C    1.0     C"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'col_1' : [1, 7, np.nan, 3, 2, 3],\n",
+    "                   'col_2' : ['A', 'B', 'B', 'C', np.nan, 'C'],\n",
+    "                   'col_3' : [8, 6, np.nan, 9, np.nan, 1],\n",
+    "                   'col_4' : ['qwe', np.nan, 'rty', 'C', np.nan, 'C']})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = IterativeImputer(imputation_order='descending', max_iter=10, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categ_cols = list(df.select_dtypes(include=['object']).columns.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_1</th>\n",
+       "      <th>col_2</th>\n",
+       "      <th>col_3</th>\n",
+       "      <th>col_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col_1  col_2  col_3  col_4\n",
+       "0    1.0    0.0    8.0    1.0\n",
+       "1    7.0    1.0    6.0    NaN\n",
+       "2    NaN    1.0    NaN    2.0\n",
+       "3    3.0    2.0    9.0    0.0\n",
+       "4    2.0    NaN    NaN    NaN\n",
+       "5    3.0    2.0    1.0    0.0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mappings = dict()\n",
+    "for categ_col in categ_cols:\n",
+    "    class_mapping = {label : idx for idx, label in enumerate(np.unique(df[categ_col].dropna()))}\n",
+    "    \n",
+    "    df[categ_col] = df[categ_col].map(class_mapping)\n",
+    "    \n",
+    "    mappings[categ_col] = class_mapping\n",
+    "    mappings[categ_col + 'min'] = df[categ_col].min()\n",
+    "    mappings[categ_col + 'max'] = df[categ_col].max()\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_1</th>\n",
+       "      <th>col_2</th>\n",
+       "      <th>col_3</th>\n",
+       "      <th>col_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>0.749806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.199933</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>6.000503</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.199074</td>\n",
+       "      <td>6.000644</td>\n",
+       "      <td>0.750066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      col_1     col_2     col_3     col_4\n",
+       "0  1.000000  0.000000  8.000000  1.000000\n",
+       "1  7.000000  1.000000  6.000000  0.749806\n",
+       "2  3.199933  1.000000  6.000503  2.000000\n",
+       "3  3.000000  2.000000  9.000000  0.000000\n",
+       "4  2.000000  1.199074  6.000644  0.750066\n",
+       "5  3.000000  2.000000  1.000000  0.000000"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imputer.fit(df.values)\n",
+    "df[df.columns] = imputer.transform(df.values)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col_1</th>\n",
+       "      <th>col_2</th>\n",
+       "      <th>col_3</th>\n",
+       "      <th>col_4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>A</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>qwe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>qwe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.199933</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6.000503</td>\n",
+       "      <td>rty</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6.000644</td>\n",
+       "      <td>qwe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      col_1 col_2     col_3 col_4\n",
+       "0  1.000000     A  8.000000   qwe\n",
+       "1  7.000000     B  6.000000   qwe\n",
+       "2  3.199933     B  6.000503   rty\n",
+       "3  3.000000     C  9.000000     C\n",
+       "4  2.000000     B  6.000644   qwe\n",
+       "5  3.000000     C  1.000000     C"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for categ_col in categ_cols:\n",
+    "    inv_class_mapping = {idx : label for label, idx in mappings[categ_col].items()}\n",
+    "    \n",
+    "    # np.clip makes sure the categorical integers will have corresponding labels\n",
+    "    df[categ_col] = np.clip(list(map(round, df[categ_col])), \n",
+    "                            mappings[categ_col+'min'],\n",
+    "                            mappings[categ_col+'max'])\n",
+    "    \n",
+    "    df[categ_col] = df[categ_col].map(inv_class_mapping)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
