--- a/lambda-map-filter.ipynb
+++ b/lambda-map-filter.ipynb
@@ -308,7 +308,28 @@
    "source": [
     "a = [1,2,3,4]\n",
     "b = [5,6,7,8]\n",
-    "list(map(lambda x,y:x+y, a,b))"
+    "list(map(lambda x,y : x+y, a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 4, 30, 8]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "list(map(lambda x: x*2 if x%2==0 else x*10, a))"
    ]
   }
  ],
