--- a/missing_values.ipynb
+++ b/missing_values.ipynb
@@ -1202,6 +1202,7 @@
     }
    ],
    "source": [
+    "# Instead of the code above something like Label Encoding can be used\n",
     "mappings = dict()\n",
     "for categ_col in categ_cols:\n",
     "    class_mapping = {label : idx for idx, label in enumerate(np.unique(df[categ_col].dropna()))}\n",
