--- a/Formatting.ipynb
+++ b/Formatting.ipynb
@@ -89,6 +89,7 @@
     }
    ],
    "source": [
+    "# correct\n",
     "print('STR: {a}, INT: {b}'.format(a=some_text, b=some_integer))"
    ]
   },
@@ -107,6 +108,7 @@
     }
    ],
    "source": [
+    "# incorrect\n",
     "print('STR: {a}, INT: {}'.format(a=some_text, some_integer))"
    ]
   },
@@ -455,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
