MLE vs MAP vs EM added

--- a/MLE_MAP_Conjugate.ipynb
+++ b/MLE_MAP_Conjugate.ipynb
@@ -889,6 +889,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MLE vs MAP vs EM\n",
+    "\n",
+    "https://stats.stackexchange.com/questions/235070/relation-between-map-em-and-mle\n",
+    "\n",
+    "https://bjlkeng.github.io/posts/the-expectation-maximization-algorithm/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imagine that you have some data X and probabilistic model parametrized by θ, you are interested in learning about θ given your data. The relation between data, parameter and model is described using likelihood function\n",
+    "\n",
+    "\n",
+    "L(θ∣X)=p(X∣θ)\n",
+    "\n",
+    "\n",
+    "To find the best fitting θ you have to look for such value that maximizes the conditional probability of θ given X. Here things start to get complicated, because you can have different views on what θ is. You may consider it as a fixed parameter, or as a random variable. If you consider it as fixed, then to find it's value you need to find such value of θ that maximizes the likelihood function (maximum likelihood method). On another hand, if you consider it as a random variable, then this means that it also has some distribution, so you need to make one more assumption about prior distribution of θ, i.e. p(θ), and you will be using Bayes theorem for estimation\n",
+    "\n",
+    "\n",
+    "p(θ∣X)∝p(X∣θ)p(θ)\n",
+    "\n",
+    "\n",
+    "If you are not interested in estimating the posterior distribution of θ but only about point estimate that maximizes the posterior probability, then you will be using maximum a posteriori (MAP) method for estimating it.\n",
+    "\n",
+    "As about expectation-maximalization (EM), it is an algorithm that can be used in maximum likelihood approach for estimating certain kind of models (e.g. involving latent variables, or in missing data scenarios)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
