pydantic new url added

--- a/pydantic.ipynb
+++ b/pydantic.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Adapted from https://towardsdatascience.com/pydantic-688e897cfd3a"
+    "Adapted from https://towardsdatascience.com/pydantic-688e897cfd3a\n",
+    "\n",
+    "Another useful article: https://medium.com/swlh/cool-things-you-can-do-with-pydantic-fc1c948fbde0"
    ]
   },
   {
